# llm-observatory

./: .gitignore  README.md  app.py  pyproject.toml
docs/: architecture.md  demo_script.md  design.md
eval/datasets/: capitals.jsonl
migrations/: env.py
migrations/versions/: 38e689372347_initial_schema_traces_spans_eval_scores.py
src/llm_observatory/: __init__.py  alerting.py  analytics.py  db.py  demo.py  models.py  offline_eval.py  online_eval.py  regression.py  sdk.py  seed.py  store.py  writer.py
tests/: test_alerting.py  test_analytics.py  test_demo.py  test_migrations.py  test_models.py  test_offline_eval.py  test_online_eval.py  test_regression.py  test_sdk.py  test_seed.py  test_smoke.py  test_store.py
